# wallet-firmware

./: .gitignore  .gitmodules  CMakeLists.txt  command.c  command.cpp  command.h  ecc.c  esp_serial.cpp  firmware.ino  main.c  random.h  serial.h
firmware/: command.c  command.h  ecc.c  ecc.h  firmware.ino  random.c  serial.c  serial.h
windows/: main.c
